--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://140.143.39.84:3306/meme?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-    username: fang
-    password: 123456
+    url: jdbc:mysql://47.107.33.13:3306/meme?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: root
+    password: DC015ffbf0cb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jackson:
     date-format: yyyy/MM/dd
